--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <!-- Logo/Brand -->
                 <div class="flex items-center">
                     <h1 class="text-2xl lg:text-3xl font-black gradient-text">
-                        BISHOY
+                        Portfolio
                     </h1>
                 </div>
                 
@@ -333,7 +333,8 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                     </svg>
                 </button>
-                <div id="project-modal-body" class="p-6 sm:p-10 lg:p-12 space-y-10"></div>
+                <div id="project-modal-body" class="p-6 sm:p-10 lg:p-12 space-y-10">
+                </div>
             </div>
         </div>
     </div>
